# workshop-newsroom-ai-infra

./: .gitignore  01-gradio-ocr-fancy.ipynb  01-gradio-ocr-simple.ipynb  02-gradio-tts-fancy.ipynb  02-gradio-tts-simple.ipynb  03-streamlit-pdf-search-manual.ipynb  03-streamlit-pdf-search.py  04-streamlit-transfers-fancy.py  04-streamlit-transfers-simple.py  04-transfers.ipynb  06-openrouter-pydantic.ipynb  README.md  benchmark-glm-ocr.py  pyproject.toml  workshop-config.yaml  workshop-site.json
.devcontainer/: devcontainer.json  setup.sh
data/evaluations/: opinion-pieces.csv  tips-with-many-columns.csv
data/pdfs/: manifest.jsonl  summary.json
docs/: index.html
docs/01-ocr/: 01-gradio-ocr-fancy-ANSWERS.html  01-gradio-ocr-fancy-ANSWERS.ipynb  01-gradio-ocr-fancy.ipynb  01-gradio-ocr-simple-ANSWERS.html  01-gradio-ocr-simple-ANSWERS.ipynb  01-gradio-ocr-simple.ipynb
docs/02-text-to-speech/: 02-gradio-tts-fancy-ANSWERS.html  02-gradio-tts-fancy-ANSWERS.ipynb  02-gradio-tts-fancy.ipynb  02-gradio-tts-simple-ANSWERS.html  02-gradio-tts-simple-ANSWERS.ipynb  02-gradio-tts-simple.ipynb
docs/03-pdf-search/: 03-streamlit-pdf-search-manual-ANSWERS.html  03-streamlit-pdf-search-manual-ANSWERS.ipynb  03-streamlit-pdf-search-manual.ipynb  03-streamlit-pdf-search.html  03-streamlit-pdf-search.py
docs/04-transfer-data/: 04-streamlit-transfers-fancy.html  04-streamlit-transfers-simple.html  04-transfers-ANSWERS.html  04-transfers-ANSWERS.ipynb  04-transfers.ipynb
docs/06-structured-outputs/: 06-openrouter-pydantic-ANSWERS.html  06-openrouter-pydantic-ANSWERS.ipynb  (+1 more)
(+19 files in other folders)
